Spacing or size issue

--- a/src/AllComponent/CSSFile/YourCourses.css
+++ b/src/AllComponent/CSSFile/YourCourses.css
@@ -4,6 +4,7 @@
   row-gap: 10px;
   margin: 25px 0px;
   justify-items: center;
+  margin-left: -7px;
   }
   .cardImage{
    border-top-right-radius: 15px;
